--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap');
 
 
+body{
+  font-family: 'Vazirmatn', sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
